# Palace-mcp

./: README.md  example_prompts.md  pyproject.toml
.github/prompts/: startingBuildingPrompt.md
.github/workflows/: ci.yml
src/palace_mcp/: __init__.py  config.py  server.py
src/palace_mcp/data/: materials.json
src/palace_mcp/data/docs/: README.md  faq.md  index.md  installation.md  quick-start.md  reference.md  running.md
src/palace_mcp/data/docs/config/: boundaries.md  domains.md  model.md  overview.md  problem.md  solver.md
src/palace_mcp/data/docs/developer/: notes.md  spack.md  testing.md  tutorial-gpu-profiling.md  tutorial-unit-test.md
src/palace_mcp/data/docs/examples/: antenna.md  coaxial.md  cpw.md  cylinder.md  overview.md  rings.md  spheres.md  transmon.md
src/palace_mcp/data/docs/features/: farfield.md
src/palace_mcp/data/docs/guide/: boundaries.md  model.md  overview.md  parallelism.md  postprocessing.md  (+1 more)
src/palace_mcp/data/templates/: driven.json  eigenmode.json  electrostatic.json  magnetostatic.json  transient.json
src/palace_mcp/data/vtk_docs/: examples.md  file-formats.md  getting-started.md  readers-writers.md
src/palace_mcp/palace/: __init__.py  config_builder.py  result_parser.py  validator.py
src/palace_mcp/tools/: docs.py  materials.py  mesh.py  project.py  templates.py  visualization.py
tests/: test_config.py  test_config_builder.py  test_docs.py  test_integration_simulation.py  test_materials.py  test_palace_runner.py  test_project.py  test_result_parser.py  test_server.py  test_templates.py  test_validator.py
