[project]
name = "palace-mcp"
version = "0.1.0"
description = "MCP server for AWS Palace electromagnetic simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "vtk>=9.3.0",
    "trame>=3.0.0",
    "trame-vtk>=2.0.0",
    "trame-vuetify>=2.0.0",
    "plotly>=5.0.0",
    "gmsh>=4.12.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
]

[project.scripts]
palace-mcp = "palace_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/palace_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/palace_mcp", "docs"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
